# jamtestvectors

./: CHANGELOG.md  README.md  gen_block.py  spec_config.py
accumulate/: README.md  accumulate.asn  validate.py
asn1-schema/: constants-full.asn  constants-tiny.asn  jam-types.asn  simple.asn  utils.py
assurances/: README.md  assurances.asn  validate.py
authorizations/: README.md  authorizations.asn  validate.py
codec/: README.md  block.json  convert.py  convert.sh  schema.asn  tickets_extrinsic.json  validate.py  work_result_1.json
disputes/: README.md  disputes.asn  full.asn  tiny.asn  validate.py
erasure/: README.md  convert.py  schema.asn
erasure-coding/: convert.py  convert.sh  main.py  parse.sh  validate.py
erasure_coding/: README.md  schema_ec.json  schema_page_proof.json  schema_segment_ec.json  schema_segment_root.json  vector_schema.json
erasure_conding/: test_segment_shards.json  test_segment_shards_tiny.json
history/: README.md  history.asn  validate.py
host_function/: README.md
jam-types-asn/: README.md  constants-tiny.asn  full-const.asn  jam-types.asn  simple.asn  tiny-const.asn  utils.py
lib/: README.md  bin_to_json.py  full-const.asn  jam-types.asn  tiny-const.asn  validate_asn1.py
libs/: README.md  tiny-const.asn
preimages/: README.md  preimages.asn  validate.py
pvm/: LICENSE  README.md  TESTCASES.md  schema.asn  schema.json  validate-asn-schema.py  validate-json-schema.sh
reports/: README.md  reports.asn  validate.py
stf/accumulate/test-service/: Cargo.toml
stf/accumulate/test-service/src/: lib.rs  main.rs
(+2452 files in other folders)
